v0.0.1, 29-Oct-2020 -- initial setup
 31-Oct-2020 -- implement Linear; implement tests
  1-Nov-2020 -- implement Scale; migrate pre/post parsing to a sub-function